# alilink

./: CMakeLists.txt  CreateESDChain.C  execAliTask.cxx  execTestRoot.cxx  runAliTask.C  testRoot.C
cmake/Modules/: FindALIROOT.cmake  FindROOT.cmake
task/: AliAnalysisTaskPt.cxx  AliAnalysisTaskPt.h  CMakeLists.txt  LinkDef.h
